# streamr_agent

./: .gitignore  CMakeLists.txt  LICENSE  README.md  default.nix  fetchNixpkgs.nix  package.xml  setup.py
launch/: agent.launch
robonomics/: genbags.py  model.txt  objective_1d.bag  objective_1h.bag  objective_2min.bag  promisee_node.py
scripts/: streamr_publisher_node  streamr_trader_node
src/streamr_agent/: nodes.py  simple_streamr_client.py  streamr_publisher.py  streamr_thread.py  streamr_trader.py
